a better representation of what my real project looks like

--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -25,4 +25,9 @@
     {
         base.OnInitialized();
     }
+    protected override void Dispose(bool disposing)
+    {
+        base.Dispose(disposing);
+        Dispatcher.Dispatch(new IncrementCounterAction());
+    }
 }
